<resources>
    <string name="app_name">Produtos</string>
    <string name="lblEmpresa">Selecione uma empresa:</string>
    <string name="btnConfirma">Confirmar</string>
    <string name="Buscar">Buscar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cadastrarProd">Cadastrar Produto</string>
    <string name="salvar">Salvar</string>
    <string name="sair">Sair</string>
    <string-array name="filtroProdutos">
        <item name="ordDesc">Ordenar por descrição</item>
        <item name="ordCod">Ordenar por código</item>
    </string-array>
    <string name="title_activity_cadprodutos1">Cadastro de Produto</string>
    <string name="title_activity_cadprodutos2">Cadastro de Produto</string>
    <string name="cep_invalido">CEP Inválido!</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="descricao">Descrição</string>
    <string name="grupo">Grupo</string>
    <string name="situacao">Situação</string>
    <string name="campo_obrigatorio">Campo obrigatório.</string>
    <string name="mensagem_atualizar">Registro atualizado com sucesso!</string>
    <string name="mensagem_cadastro">Registro cadastrado com sucesso!</string>
    <string name="mensagem_erro">Erro ao salvar!</string>
    <string name="continuar">Continuar</string>
    <string name="apelido">Apelido</string>
    <string name="peso_liquido">Peso Líquido</string>
    <string name="classificao">Classificação</string>
    <string name="subgrupo">SubGrupo</string>
    <string name="concluir">Concluir</string>
    <string name="voltar">Voltar</string>
    <string name="trocar_empresa">Trocar Empresa</string>
    <string name="mensagem_excluir">Excluido con sucesso!</string>
    <string name="mensagem_nada_encontrado">Nenhum registro encontrado.</string>
    <string name="empresas_cadastradas">Empresas Cadastradas</string>
    <string name="razao_social">Razão Social</string>
    <string name="nome_fantasia">Nome Fantasia</string>
    <string name="cnpj">CNPJ</string>
    <string name="inscri_o_estadual">Inscrição Estadual</string>
    <string name="telefone">Telefone</string>
    <string name="fax">Fax</string>
    <string name="cep">CEP</string>
    <string name="endere_o">Endereço</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="cadastrar_empresa">Cadastrar Empresa</string>
    <string name="exibir_empresas">Exibir Empresas</string>
</resources>
