<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group >
        <item
            android:id="@+id/action_cadastrar_empresa"
            android:orderInCategory="100"
            android:title="@string/exibir_empresas"
            app:showAsAction="ifRoom|withText" />
        <item
            android:id="@+id/action_cadastrar_produto"
            android:orderInCategory="100"
            android:title="@string/cadastrarProd"
            app:showAsAction="ifRoom|withText" />
    </group>

    <item android:id="@+id/action_trocar_empresa"
        android:title="@string/trocar_empresa"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_action_new"/>
</menu>