<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:scrollIndicators="right"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:text="@string/descricao"
            android:textSize="16sp" />

        <EditText android:textAllCaps="true"
            android:id="@+id/produto_edtDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/textColor"
            android:inputType="textCapCharacters" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:text="@string/grupo"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/produto_spnGrupo"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:text="@string/situacao"
            android:textSize="16sp" />

        <EditText android:textAllCaps="true"
            android:id="@+id/produto_edtSituacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapCharacters"
            android:textColor="@color/textColor" />

        <Button
            android:id="@+id/btnProximoProd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onContinuarClick"
            android:text="@string/continuar" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>